tests/baselines/reference/yieldInComputedNameOfContextuallyTypedObjectNoCrash1.errors.txt
yieldInComputedNameOfContextuallyTypedObjectNoCrash1.ts(5,7): error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.


==== yieldInComputedNameOfContextuallyTypedObjectNoCrash1.ts (1 errors) ====
    // https://github.com/microsoft/TypeScript/issues/62941
    
    function* g() {
      let x: any = {
        *[yield 0]() {},
          ~~~~~
!!! error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.
      };
    }
    